NIFI-12241 backport to jdk8